--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,15 +12,100 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" href="/static/css/style.css">
+
     <script src="https://unpkg.com/htmx.org@1.9.12"
         integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
         crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>Welcome to HTMX with FastAPI</h1>
+    <nav>
+        <ul>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#blog">Blog</a></li>
+        </ul>
+    </nav>
+
+    <!-- <h1>Welcome to HTMX with FastAPI</h1>
     <button hx-get="/hello" hx-target="#message" hx-swap="innerHTML">Say Hello</button>
-    <div id="message"></div>
+    <div id="message"></div> -->
+
+    <section id="portfolio">
+        <h1>Portfolio</h1>
+    <div class="portfolio">
+        <div class="portfolio-item">
+            <div class="upper-section">
+                <img src="https://via.placeholder.com/150" alt="Project 1">
+                <div class="upper-text">
+                    <h2>Project 1</h2>
+                    <p>Short description of Project 1.</p>
+                </div>
+            </div>
+            <div class="lower-section">
+                <p class="lower-left">Detail 1</p>
+                <p class="lower-right">Detail 2</p>
+            </div>
+        </div>
+        <div class="portfolio-item">
+            <div class="upper-section">
+                <img src="https://via.placeholder.com/150" alt="Project 2">
+                <div class="upper-text">
+                    <h2>Project 2</h2>
+                    <p>Short description of Project 2.</p>
+                </div>
+            </div>
+            <div class="lower-section">
+                <p class="lower-left">Detail 1</p>
+                <p class="lower-right">Detail 2</p>
+            </div>
+        </div>
+        <div class="portfolio-item">
+            <div class="upper-section">
+                <img src="https://via.placeholder.com/150" alt="Project 3">
+                <div class="upper-text">
+                    <h2>Project 3</h2>
+                    <p>Short description of Project 3.</p>
+                </div>
+            </div>
+            <div class="lower-section">
+                <p class="lower-left">Detail 1</p>
+                <p class="lower-right">Detail 2</p>
+            </div>
+        </div>
+        <button class="see-more">See More</button>
+    </div>
+
+    </div>
+    </section>
+
+    <section id="blog">
+        <h1>Blog</h1>
+        <div class="blog-cards">
+            <div class="blog-card">
+                <img src="https://via.placeholder.com/600x400" alt="Blog Post 1">
+                <div class="overlay">
+                    <h2>Titolo del Post 1</h2>
+                    <p>Descrizione breve del post 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <div class="blog-card">
+                <img src="https://via.placeholder.com/600x400" alt="Blog Post 2">
+                <div class="overlay">
+                    <h2>Titolo del Post 2</h2>
+                    <p>Descrizione breve del post 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+            <div class="blog-card">
+                <img src="https://via.placeholder.com/600x400" alt="Blog Post 3">
+                <div class="overlay">
+                    <h2>Titolo del Post 3</h2>
+                    <p>Descrizione breve del post 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
