passing arguments test,

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -5,7 +5,7 @@
             <div class="upper-section">
                 <img src="https://via.placeholder.com/150" alt="Project 1">
                 <div class="upper-text">
-                    <h2>Project 1</h2>
+                    <h2>{{project_name}}</h2>
                     <p>Short description of Project 1.</p>
                 </div>
             </div>
