new layout already kinda working

--- a/app/templates/shared/partials/about.html
+++ b/app/templates/shared/partials/about.html
@@ -1,14 +1,29 @@
-<section id="about" class="about-me">
-    <div class="profile-pic">
-        <img src="https://via.placeholder.com/150" alt="Profile Picture">
-    </div>
-    <div class="about-details">
-        <div class="name">John Doe</div>
-        <div class="title">Software Engineer</div>
-        <div class="social-links">
-            <a href="#"><img src="https://via.placeholder.com/16" alt="Icon 1"></a>
-            <a href="#"><img src="https://via.placeholder.com/16" alt="Icon 2"></a>
-            <a href="#"><img src="https://via.placeholder.com/16" alt="Icon 3"></a>
-        </div>
-    </div>
-</section>
+<section class="about-me">
+            <img src="path/to/photo.jpg" alt="Your Photo">
+            <h1>Nome Cognome</h1>
+            <h2>Qualifica</h2>
+            <div class="presentation">
+                <h3>Presentazione</h3>
+                <p>Breve descrizione di presentazione.</p>
+            </div>
+            <div class="skills">
+                <h3>Skills</h3>
+                <ul>
+                    <li>Skill 1</li>
+                    <li>Skill 2</li>
+                    <li>Skill 3</li>
+                </ul>
+            </div>
+            <div class="personal-info">
+                <p>Location: Città, Paese</p>
+                <p>Età: XX anni</p>
+            </div>
+            <div class="social-icons">
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-github"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+            </div>
+            <a class="cv-download" href="path/to/cv.pdf" download>
+                <i class="fa fa-download"></i> Scarica CV
+            </a>
+        </section>
