--- a/app/templates/shared/partials/footer.html
+++ b/app/templates/shared/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="copyright">
-        I wanna be the very best Like no one ever was
+        Since you've scrolled this far, why not write to me?
     </div>
 </footer>
