--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,318 +1,163 @@
 :root {
-    --primary-color: #3498db;
-    --secondary-color: #2ecc71;
-    --font-stack: Helvetica, sans-serif;
-    --background-color: #f4f4f4;
-    --button-padding: 12px 20px;
-    --button-font-size: 16px;
-    --button-margin: 4px 4px;
-    --button-border-radius: 4px;
-    --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    --container-padding: 20px;
-    --max-width: 1200px;
+    --background-lighter: #24242E;
+    --background-normal: #20202A;
+    --background-darker: #1E1E28;
+    --text-color: #ffffff;
+}
+
+[data-theme="dark"] {
+    --background-lighter: #24242E;
+    --background-normal: #20202A;
+    --background-darker: #1E1E28;
+    --text-color: #ffffff;
+}
+
+[data-theme="light"] {
+    --background-lighter: #f5f5f5;
+    --background-normal: #ffffff;
+    --background-darker: #e0e0e0;
+    --text-color: #000000;
 }
 
 body {
-    font-family: var(--font-stack);
+    font-family: 'Merriweather', serif;
+    background-color: var(--background-normal);
+    color: var(--text-color);
     margin: 0;
-    padding: 0;
-    background-color: var(--background-color);
-}
-
-h1 {
-    color: var(--primary-color);
-    text-align: center;
-}
-
-button {
-    background-color: var(--secondary-color);
-    color: white;
-    border: none;
-    padding: var(--button-padding);
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: var(--button-font-size);
-    margin: var(--button-margin);
-    cursor: pointer;
-    border-radius: var(--button-border-radius);
-}
-
-#message {
-    margin-top: 20px;
-    text-align: center;
-    font-size: 18px;
-}
-
-.portfolio,
-#portfolio,
-#blog {
-    padding: var(--container-padding);
-    margin: 0 auto;
-    max-width: var(--max-width);
-    box-sizing: border-box;
-}
-
-.portfolio {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-}
-
-.portfolio-item {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 20px;
-    width: 100%;
-    max-width: 600px;
-    background: white;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: var(--box-shadow);
-}
-
-.upper-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.upper-section img {
-    width: 150px;
-    height: auto;
-    border-radius: 8px;
-    margin-bottom: 10px;
-}
-
-.upper-text {
-    text-align: center;
-}
-
-.upper-text h2 {
-    margin: 0;
-    color: var(--primary-color);
-}
-
-.lower-section {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 10px;
-}
-
-.lower-section p {
-    margin: 0;
-    padding: 5px 0;
-}
-
-.lower-left {
-    color: var(--secondary-color);
-}
-
-.lower-right {
-    color: var(--primary-color);
-}
-
-.see-more {
-    background-color: var(--secondary-color);
-    color: white;
-    border: none;
-    padding: var(--button-padding);
-    text-align: center;
-    text-decoration: none;
-    display: block; /* Assicurati che sia un blocco per occupare l'intera larghezza disponibile */
-    margin: 0 auto; /* Centra il bottone */
-    font-size: var(--button-font-size);
-    margin: var(--button-margin);
-    cursor: pointer;
-    border-radius: var(--button-border-radius);
-}
-
-@media (min-width: 600px) {
-    .upper-section {
-        flex-direction: row;
-        align-items: center;
-    }
-
-    .upper-section img {
-        margin-right: 20px;
-        margin-bottom: 0;
-    }
-
-    .upper-text {
-        text-align: left;
-    }
-}
-
-@media (min-width: 900px) {
-    .portfolio {
-        padding: 40px;
-    }
-
-    .portfolio-item {
-        max-width: 600px;
-    }
-}
-
-@media (max-width: 768px) {
-
-    #portfolio,
-    #blog {
-        padding: 20px 10px;
-    }
-}
-
-.blog-cards {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.blog-card {
-    position: relative;
-    width: calc(30% - 20px);
-    margin-bottom: 20px;
+    height: 100vh;
     overflow: hidden;
-    border-radius: 8px;
-    box-shadow: var(--box-shadow);
 }
 
-.blog-card img {
-    width: 100%;
-    height: auto;
-    display: block;
-    border-radius: 8px 8px 0 0;
+.container {
+    display: flex;
+    width: 90%;
+    height: 100%;
 }
 
-.overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
-    color: white;
-    text-align: center;
-}
-
-.overlay h2,
-.overlay p {
-    margin: 0;
-}
-
-.overlay p {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-
-@media (max-width: 768px) {
-    .blog-cards {
-        flex-direction: column;
-    }
-
-    .blog-card {
-        width: 100%;
-    }
-}
-
-nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background-color: #333;
-    padding: 10px 0;
-    z-index: 1000;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    text-align: center;
-}
-
-nav ul li {
-    display: inline;
-    margin-right: 20px;
-}
-
-nav ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    color: #ccc;
+.about-me,
+.content,
+.navbar {
+    padding: 1rem;
 }
 
 .about-me {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding: var(--container-padding);
-    max-width: 800px;
-    margin: 20px auto;
-    /* Centra la sezione orizzontalmente e aggiunge margine verticale */
-}
-
-.profile-pic {
-    flex: 0 0 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 20px;
-}
-
-.profile-pic img {
-    width: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-}
-
-.about-details {
-    /* flex: 1; */
+    flex: 3;
+    background-color: var(--background-darker);
+    border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
 }
 
-.name {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 5px;
+.content {
+    flex: 11;
+    background-color: var(--background-lighter);
+    border-radius: 0.5rem;
+    margin-left: 20%;
+    overflow-y: auto;
 }
 
-.title {
-    font-size: 18px;
-    color: #666;
-    margin-bottom: 10px;
-}
-
-.social-links {
+.navbar {
+    flex: 1;
+    background-color: var(--background-darker);
+    border-radius: 0.5rem;
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
     display: flex;
-    gap: 10px;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 2rem;
 }
 
-.social-links a img {
-    width: 24px;
-    height: 24px;
+.navbar button {
+    background: white;
+    border: none;
+    color: var(--text-color);
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
 }
 
-@media (max-width: 600px) {
-    .about-me {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
+.navbar button i {
+    pointer-events: none;
+}
+
+img {
+    max-width: 100%;
+    border-radius: 0.5rem;
+}
+
+h1,
+h2,
+h3,
+p {
+    margin: 0.5rem 0;
+}
+
+.project-card {
+    display: flex;
+    margin: 1rem 0;
+    background-color: var(--background-normal);
+    border-radius: 0.5rem;
+    padding: 1rem;
+}
+
+.project-card img {
+    width: 30%;
+    margin-right: 1rem;
+}
+
+.project-description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media (max-width: 768px) {
+
+    .about-me,
+    .navbar {
+        display: none;
     }
 
-    .profile-pic {
-        margin-right: 0;
-        margin-bottom: 20px;
+    .content {
+        width: 100%;
+        margin: 0;
     }
+}
 
-    .social-links {
-        justify-content: center;
-    }
+.social-icons {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.social-icons a {
+    color: var(--text-color);
+    font-size: 1.5rem;
+    text-decoration: none;
+}
+
+.cv-download {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.cv-download i {
+    margin-right: 0.5rem;
 }
