--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -3,36 +3,18 @@
 
 
 
-<div id="content">
+<section class="content" hx-get="/projects" hx-trigger="load">
+    <!-- Projects will be loaded here dynamically -->
+    {% for project in portfolio %}
+        {{ render_partial('shared/partials/project_post.html', project=project) }}
+    {% endfor %}
+</section>
+    
+            
+    
+            
 
-    {{ render_partial('shared/partials/about.html') }}
-
-    
-    <section id="portfolio">
-        <h1>Portfolio</h1>
-        <div class="portfolio">
-    
-            {% for project in portfolio %}
-                {{ render_partial('shared/partials/project_post.html', project=project) }}
-            {% endfor %}
-    
-            <button class="see-more">See More</button>
-        </div>
-    </section>
-
-    <section id="blog">
-        <h1>Blog</h1>
-        <div class="blog-cards">
-    
-            {% for post in blog %}
-            {{ render_partial('shared/partials/blog_post.html', post=post) }}
-            {% endfor %}
-    
-        </div>
-        <button class="see-more">See More</button>
-    </section>
-
-<script>
+<!-- <script>
     document.addEventListener('htmx:afterSwap', function (event) {
         const triggerElement = event.detail.requestConfig.elt;
         const scrollTarget = triggerElement.getAttribute('data-scroll');
@@ -46,6 +28,6 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });
         }
     });
-</script>
+</script> -->
 
 {% endblock %}
