--- a/app/templates/shared/_layout.html
+++ b/app/templates/shared/_layout.html
@@ -9,8 +9,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/static/images/favicon/favicon-16x16.png">
     <link rel="manifest" href="/static/images/favicon/site.webmanifest">
     <link rel="mask-icon" href="/static/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
+    <!-- <meta name="theme-color" content="#ffffff"> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="/static/css/style.css">
 
@@ -18,23 +22,25 @@
         integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2"
         crossorigin="anonymous"></script>
 
-    <style>
-        .main-content {
-            padding: 80px 40px;
-            /* Spazio per evitare la sovrapposizione con la navbar */
-        }
-    </style>
 </head>
 
 <body>
-    {% include 'shared/partials/navbar.html' %}
+    <div class="container">
 
-    <div class="main-content">
+        {% include 'shared/partials/about.html' %}
+
 
         {% block main_content %}{% endblock %}
+
+        <nav class="navbar">
+            <button id="theme-toggle"><i class="fas fa-adjust"></i></button>
+            <!-- Other navbar buttons/icons -->
+        </nav>
+        
     </div>
 
-    {% include 'shared/partials/footer.html' %}
+    <script src="/static/javascript/script.js"></script>
+
 </body>
 
 </html>
