--- a/app/templates/shared/partials/project_post.html
+++ b/app/templates/shared/partials/project_post.html
@@ -1,13 +1,7 @@
-<div class="portfolio-item">
-    <div class="upper-section">
-        <img src="https://via.placeholder.com/150" alt="{{ project.title }}">
-        <div class="upper-text">
-            <h2>{{project.title}}</h2>
-            <p>{{project.description}}</p>
-        </div>
-    </div>
-    <div class="lower-section">
-        <p class="lower-left">{{project.detail1}}</p>
-        <p class="lower-right">{{project.detail2}}</p>
+<div class="project-card">
+    <img src="{{ project.image }}" alt="Project Image">
+    <div class="project-description">
+        <h3>{{ project.title }}</h3>
+        <p>{{ project.description }}</p>
     </div>
 </div>
