--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -2,32 +2,12 @@
 {% block main_content %}
 
 
-
+<!-- Fix projects call -->
 <section class="content" hx-get="/projects" hx-trigger="load">
     <!-- Projects will be loaded here dynamically -->
     {% for project in portfolio %}
         {{ render_partial('shared/partials/project_post.html', project=project) }}
     {% endfor %}
 </section>
-    
-            
-    
-            
-
-<!-- <script>
-    document.addEventListener('htmx:afterSwap', function (event) {
-        const triggerElement = event.detail.requestConfig.elt;
-        const scrollTarget = triggerElement.getAttribute('data-scroll');
-        if (scrollTarget) {
-            const targetElement = document.getElementById(scrollTarget);
-            if (targetElement) {
-                targetElement.scrollIntoView({ behavior: 'smooth' });
-            }
-        } else {
-            // Scroll to the top of the page
-            window.scrollTo({ top: 0, behavior: 'smooth' });
-        }
-    });
-</script> -->
 
 {% endblock %}
