--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,7 @@ body {
     flex: 11;
     border-radius: 0.25rem;
     background-color: var(--background-lighter);
-    padding: 1rem 1rem;
+    padding: 1rem;
     overflow-y: auto;
 }
 
@@ -59,7 +59,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1rem 1rem;
+    padding: 1rem;
 }
 
 .nav {
@@ -68,52 +68,37 @@ body {
     background-color: var(--background-lighter);
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    gap: 0.5rem;
+    justify-content: space-between;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
 
 .nav-upper-section {
-    flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 1rem;
 }
 
 .nav-lower-section {
-    flex: 1;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
+    gap: 1rem;
 }
 
 .nav-button {
-    width: 1.5rem;
-    height: 1.5rem;
-}
-
-.collapsable-section {
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
+    background-color: var(--background-normal);
+    color: var(--text-color);
+    border: none;
     cursor: pointer;
-    padding: 1rem;
-    border: 1px solid var(--background-normal);
-    border-radius: 0.25rem;
-    margin-bottom: 1rem;
 }
 
-.collapsable-section h2 {
-    margin: 0;
-    font-size: 1.25rem;
-}
-
-.collapsable-content {
-    display: none;
-    padding: 1rem;
-    border-top: 1px solid var(--background-normal);
-}
-
-.collapsable-content.active {
-    display: block;
+.nav-button:hover {
+    background-color: var(--background-lighter);
 }
 
 button {
@@ -135,27 +120,6 @@ pre {
     padding: 1rem;
     border-radius: 0.25rem;
     overflow-x: auto;
-}
-
-.nav-upper-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-}
-
-.nav-button {
-    width: 2rem;
-    height: 2rem;
-    font-size: 1.5rem;
-    background-color: var(--background-normal);
-    color: var(--text-color);
-    border: none;
-    cursor: pointer;
-}
-
-.nav-button:hover {
-    background-color: var(--background-lighter);
 }
 
 .snippet-tabs {
@@ -244,6 +208,7 @@ pre {
     cursor: pointer;
     padding: 0.5rem;
     z-index: 1;
+    display: none;
 }
 
 .image-nav.prev {
@@ -256,8 +221,4 @@ pre {
 
 .image-container:hover .image-nav {
     display: block;
-}
-
-.image-nav {
-    display: none;
 }
