--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,79 @@ body {
     background-color: var(--background-lighter);
     display: flex;
     flex-direction: column;
+    padding: 1rem;
+}
+
+.profile-section {
+    text-align: center;
+}
+
+.profile-section-image img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 2px solid var(--text-color);
+    margin-bottom: 1rem;
+}
+
+.profile-section-name {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+}
+
+.profile-section-description {
+    font-size: 1rem;
+    font-weight: normal;
+    margin-bottom: 1rem;
+}
+
+.skills-list {
+    list-style: none;
+    padding: 0;
+}
+
+.skills-list li {
+    margin-bottom: 0.5rem;
+}
+
+.info-section {
+    display: flex;
+    justify-content: space-around;
+    margin: 1rem 0;
+}
+
+.info-item {
+    text-align: center;
+}
+
+.social-icons {
+    display: flex;
+    justify-content: space-around;
+    margin: 1rem 0;
+}
+
+.social-icons a {
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.social-icons a:hover {
+    text-decoration: underline;
+}
+
+.cv-download {
+    display: block;
+    text-align: center;
+    margin-top: 1rem;
+    color: var(--text-color);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.cv-download:hover {
+    text-decoration: underline;
 }
 
 .content {
@@ -82,7 +155,7 @@ body {
 
 .nav-lower-section {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     gap: 1rem;
 }
