--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,7 @@
     --background-normal: #20202a;
     --background-darker: #1e1e28;
     --text-color: #ffffff;
+    --accent: #9a1638;
 }
 
 [data-theme="dark"] {
@@ -10,6 +11,7 @@
     --background-normal: #20202a;
     --background-darker: #1e1e28;
     --text-color: #ffffff;
+    --accent: #9a1638;
 }
 
 [data-theme="light"] {
@@ -17,6 +19,7 @@
     --background-normal: #ffffff;
     --background-darker: #e0e0e0;
     --text-color: #000000;
+    --accent: #9a1638;
 }
 
 body {
@@ -41,76 +44,101 @@ body {
 
 .about {
     flex: 2.5;
-    border-radius: 0.25rem;
-    background-color: var(--background-lighter);
+    padding: 0.5rem;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    border-radius: 0.25rem;
+    background-color: var(--background-lighter);
 }
 
-.profile-section {
-    text-align: center;
+.about-upper-section {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
 }
 
-.profile-section-image img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+.about-lower-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1rem;
+}
+
+.about-lower-section > :first-child {
+    margin-top: auto;
+}
+
+.photo-name-title {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 0.5rem;
+}
+
+.photo-name-title * {
+    margin: 0.25rem 0px 0.25rem 0px;
+    align-self: center;
+}
+
+.profile-img {
+    width: 6.25rem; /* Adjust the size as needed */
+    height: 6.25rem; /* Adjust the size as needed */
     object-fit: cover;
-    border: 2px solid var(--text-color);
-    margin-bottom: 1rem;
+    border-radius: 50%;
+    border: 0.125rem solid var(--text-color);
 }
 
-.profile-section-name {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
+.personal-description {
+    overflow: auto;
+    margin: 0.25rem 0px;
 }
 
-.profile-section-description {
-    font-size: 1rem;
-    font-weight: normal;
-    margin-bottom: 1rem;
+.personal-informations {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
 }
 
-.skills-list {
-    list-style: none;
-    padding: 0;
+.personal-informations p {
+    margin: 0px;
 }
 
-.skills-list li {
-    margin-bottom: 0.5rem;
+.personal-informations div {
+    display: flex;
+    justify-content: space-between;
 }
 
-.info-section {
+.social-links {
+    width: 100%;
     display: flex;
     justify-content: space-around;
-    margin: 1rem 0;
 }
 
-.info-item {
-    text-align: center;
+.button-fake-icon {
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
-.social-icons {
-    display: flex;
-    justify-content: space-around;
-    margin: 1rem 0;
+hr {
+    margin: 0.75rem;
+    width: 100%;
+    opacity: 0.2;
 }
 
-.social-icons a {
+.social-links a {
     text-decoration: none;
     color: var(--text-color);
 }
 
-.social-icons a:hover {
+.social-links a:hover {
     text-decoration: underline;
 }
 
 .cv-download {
     display: block;
     text-align: center;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
     color: var(--text-color);
     text-decoration: none;
     font-weight: bold;
@@ -128,11 +156,70 @@ body {
     overflow-y: auto;
 }
 
-.swap-content {
+
+.project {
+    background-color: var(--background-darker);
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    padding: 1rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    gap: 0.5rem;
+}
+
+.project * {
+    margin: 0px;
+}
+
+.rectangle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--background-lighter);
+    color: var(--text-color);
+    border-radius: 0.5rem;
+    width: 100%;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+
+.rectangle-text {
+    flex-grow: 1;
+    margin-left: 1rem;
+}
+
+.rectangle-icon {
+    color: var(--text-color);
+    margin-right: 1rem;
+}
+
+.project-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.project-img {
+    width: 100%;
+    height: 720px;
+    object-fit: cover;
+}
+
+.tags {
+    display: flex;
+    gap: 0.25rem;
+}
+
+.tag {
+    background-color: #9a1638;
+    color: var(--text-color);
+    border-radius: 0.5rem;
+    padding: 0.25rem;
+    font-size: 0.5rem;
+}
+
+.hidden {
+    display: none;
 }
 
 .nav {
@@ -141,12 +228,11 @@ body {
     background-color: var(--background-lighter);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding: 0.5rem 0rem;
 }
 
 .nav-upper-section {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -155,9 +241,13 @@ body {
 
 .nav-lower-section {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    padding-top: 1rem;
+}
+
+.nav-lower-section > :first-child {
+    margin-top: auto;
 }
 
 .nav-button {
@@ -175,8 +265,6 @@ body {
 }
 
 button {
-    margin: 0.5rem;
-    padding: 0.5rem 1rem;
     border: none;
     background-color: var(--background-normal);
     color: var(--text-color);
@@ -225,7 +313,8 @@ pre {
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    margin: 1rem 0;
+    margin: 0.5rem 0;
+    height: 1rem;
 }
 
 .dot {
@@ -255,6 +344,7 @@ pre {
     color: var(--text-color);
 }
 
+/* Aggiungi questo CSS per le frecce di navigazione */
 .image-container {
     position: relative;
     width: 100%;
@@ -294,4 +384,50 @@ pre {
 
 .image-container:hover .image-nav {
     display: block;
+}
+
+
+.icon-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.icon {
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.tooltip {
+    visibility: hidden;
+    background: linear-gradient(
+        90deg,
+        var(--background-darker) 0%,
+        var(--background-lighter) 100%
+    );
+    color: var(--text-color);
+    text-align: center;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    position: absolute;
+    z-index: 1;
+    width: max-content;
+    top: 50%;
+    right: 100%;
+    transform: translateX(-1rem) translateY(-50%);
+    box-shadow: var(--text-color) 0px 1px 3px;
+}
+
+.icon-wrapper:hover .tooltip {
+    visibility: visible;
+}
+
+.nav-icon {
+    width: 36px;
+    height: 36px;
+    object-fit: cover;
+}
+
+.white-png {
+    filter: invert(100%) sepia(0%) saturate(3569%) hue-rotate(10deg) brightness(115%) contrast(110%);
 }
