--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,15 @@
     --background-normal: #20202a;
     --background-darker: #1e1e28;
     --text-color: #ffffff;
-    --accent: #9a1638;
+    --accent: #443dff;
+    font-family: Inter, sans-serif;
+    font-feature-settings: 'liga' 1, 'calt' 1;
+}
+
+@supports (font-variation-settings: normal) {
+    :root {
+        font-family: InterVariable, sans-serif;
+    }
 }
 
 [data-theme="dark"] {
@@ -11,7 +19,7 @@
     --background-normal: #20202a;
     --background-darker: #1e1e28;
     --text-color: #ffffff;
-    --accent: #9a1638;
+    --accent: #443dff;
 }
 
 [data-theme="light"] {
@@ -19,27 +27,28 @@
     --background-normal: #ffffff;
     --background-darker: #e0e0e0;
     --text-color: #000000;
-    --accent: #9a1638;
+    --accent: #8292b3;
 }
 
+html,
 body {
     margin: 0;
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    overflow: hidden;
     background-color: var(--background-darker);
     color: var(--text-color);
-    font-family: "Merriweather", serif;
-    font-size: 16px;
 }
 
 .container {
+    width: calc(100vmin * 1.5);
+    height: 95%;
+    max-width: 95%;
+    box-sizing: border-box;
     display: flex;
-    width: 98vw;
-    height: 98%;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .about {
@@ -65,7 +74,7 @@ body {
     padding-top: 1rem;
 }
 
-.about-lower-section > :first-child {
+.about-lower-section> :first-child {
     margin-top: auto;
 }
 
@@ -81,8 +90,10 @@ body {
 }
 
 .profile-img {
-    width: 6.25rem; /* Adjust the size as needed */
-    height: 6.25rem; /* Adjust the size as needed */
+    width: 6.25rem;
+    /* Adjust the size as needed */
+    height: 6.25rem;
+    /* Adjust the size as needed */
     object-fit: cover;
     border-radius: 50%;
     border: 0.125rem solid var(--text-color);
@@ -152,7 +163,7 @@ hr {
     flex: 11;
     border-radius: 0.25rem;
     background-color: var(--background-lighter);
-    padding: 1rem;
+    padding: 0.5rem 1.5rem 1.5rem 1.5rem;
     overflow-y: auto;
 }
 
@@ -161,9 +172,9 @@ hr {
     background-color: var(--background-darker);
     display: flex;
     flex-direction: column;
-    padding: 0.5rem;
+    padding: 1.5rem;
     border-radius: 0.5rem;
-    gap: 0.5rem;
+    gap: 1rem;
 }
 
 .project * {
@@ -180,6 +191,7 @@ hr {
     width: 100%;
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
+    box-shadow: var(--text-color) 0px 0px 2px;
 }
 
 .rectangle-text {
@@ -200,8 +212,7 @@ hr {
 }
 
 .project-img {
-    width: 100%;
-    height: 720px;
+    aspect-ratio: 16 / 9;
     object-fit: cover;
 }
 
@@ -211,7 +222,7 @@ hr {
 }
 
 .tag {
-    background-color: #9a1638;
+    background-color: var(--accent);
     color: var(--text-color);
     border-radius: 0.5rem;
     padding: 0.25rem;
@@ -220,6 +231,13 @@ hr {
 
 .hidden {
     display: none;
+}
+
+.section-details {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1.5rem;
 }
 
 .nav {
@@ -246,7 +264,7 @@ hr {
     padding-top: 1rem;
 }
 
-.nav-lower-section > :first-child {
+.nav-lower-section> :first-child {
     margin-top: auto;
 }
 
@@ -271,7 +289,8 @@ button {
     cursor: pointer;
 }
 
-button:focus, button:hover {
+button:focus,
+button:hover {
     background-color: var(--background-darker);
 }
 
@@ -291,7 +310,6 @@ pre {
 
 .snippet-content {
     background-color: var(--background-darker);
-    padding: 1rem;
     border-radius: 0.25rem;
     overflow-x: auto;
 }
@@ -308,7 +326,8 @@ pre {
     background-color: var(--background-darker);
 }
 
-.footer, .navigation {
+.footer,
+.navigation {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -346,15 +365,14 @@ pre {
 
 /* Aggiungi questo CSS per le frecce di navigazione */
 .image-container {
-    position: relative;
-    width: 100%;
-    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .image-container img {
-    width: 100%;
-    height: auto;
-    display: block;
+
+    aspect-ratio: 16/9;
 }
 
 .image-container img.hidden {
@@ -400,11 +418,9 @@ pre {
 
 .tooltip {
     visibility: hidden;
-    background: linear-gradient(
-        90deg,
-        var(--background-darker) 0%,
-        var(--background-lighter) 100%
-    );
+    background: linear-gradient(90deg,
+            var(--background-darker) 0%,
+            var(--background-lighter) 100%);
     color: var(--text-color);
     text-align: center;
     border-radius: 0.5rem;
@@ -430,4 +446,63 @@ pre {
 
 .white-png {
     filter: invert(100%) sepia(0%) saturate(3569%) hue-rotate(10deg) brightness(115%) contrast(110%);
+}
+
+@media (max-width: 1000px) {
+    .about, .nav {
+        position: fixed;
+        top: 0;
+        height: 95%;
+        z-index: 1000;
+        background-color: var(--background-lighter);
+        overflow-y: auto;
+        box-shadow: var(--text-color) 0px 0px 5px;
+        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
+        visibility: hidden;
+        margin: 2.5%;
+    }
+
+    .about {
+        left: 0;
+        transform: translateX(-100%);
+        width: 30%;
+
+    }
+
+    .nav {
+        right: 0;
+        transform: translateX(100%);
+        width: 10%;
+
+    }
+
+    .about.show, .nav.show {
+        opacity: 1;
+        visibility: visible;
+        transform: translateX(0);
+    }
+
+    .about-icon {
+        display: block;
+        width: 50px;
+        height: 50px;
+        background-color: var(--background-lighter);
+        border-radius: 50%;
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        z-index: 1001;
+        box-shadow: var(--text-color) 0px 0px 5px;
+    }
+
+    .about-icon::before {
+        content: '\2630'; /* Unicode for hamburger menu icon */
+        font-size: 24px;
+        color: var(--text-color);
+    }
 }
