--- a/styles/main.css
+++ b/styles/main.css
@@ -280,11 +280,11 @@ hr {
     flex-direction: column;
     gap: 1rem;
     padding: 1.5rem;
-}
-.section-details {
     overflow: hidden;
     transition: max-height 0.5s ease;
+    align-self: flex-start;
 }
+
 
 
 
@@ -505,6 +505,7 @@ pre {
     transform: translateY(-30px) rotate(25deg);
     opacity: 0;
     transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
+    pointer-events:none;
 }
 .icon-wrapper i:hover {
     background-color: var(--accent-color);
@@ -551,6 +552,7 @@ pre {
     transform: translateY(-30px) rotate(25deg);
     opacity: 0;
     transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
+    pointer-events:none;
 }
 .socials-container a:hover  {
     background-color: var(--accent-color);
