--- a/styles/main.css
+++ b/styles/main.css
@@ -260,15 +260,15 @@ hr {
 
 .tags {
     display: flex;
-    gap: 0.25rem;
+    gap: 0.375rem;
 }
 
 .tag {
-    background-color: var(--accent);
     color: var(--text-color);
-    border-radius: 0.5rem;
-    padding: 0.25rem;
+    border-radius: 0.25rem;
+    padding: 0.375rem;
     font-size: 0.5rem;
+    box-shadow: var(--text-color) 0px 0px 2px;
 }
 
 .hidden {
@@ -396,9 +396,24 @@ pre {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1rem;
-    margin: 0.5rem 0;
     height: 1rem;
+}
+
+.footer div,
+.navigation div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 0.25rem;
+    /* box-shadow: var(--text-color) 0px 0px 1.5px; */
+    border-radius: 0.375rem;
+}
+.navigation {
+    margin: 0.5rem 0 0.75rem 0;
+}
+.footer {
+    margin: 1rem 0 0 0;
 }
 
 .dot {
