--- a/styles/main.css
+++ b/styles/main.css
@@ -73,6 +73,11 @@ body {
     overflow: hidden;
 }
 
+b {
+    font-weight: bolder;
+    text-decoration: underline;
+}
+
 .background-wrapper {
     position: fixed;
     top: 0;
@@ -355,7 +360,7 @@ hr {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 0 1.5rem;
     overflow: hidden;
     transition: max-height 0.5s ease;
     align-self: flex-start;
